css/app.css
body, html{
  /* https://us.fotolia.com/id/81152878 */
  background-color: lightblue;
  background: url('../img/house.jpg') no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  font-family: Helvetica;
  height: 100%;
  padding: 0;
  margin: 0;
}
.center{
  text-align: center;
}
#rprAvmWidget_1,
.cms-hidden,
.tmpl{
  display: none;
}
.streetview{
  text-align: center;
  margin: 20px 0px 5px 0px;
}
.address{
  text-align: center;
  margin-bottom: 15px;
}
.cursor{
  cursor: pointer;
}
.max-350{
  max-width: 350px;
  display: inline;
  margin: auto;
}
.container{
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
}
.loading{
  text-align: center;
  margin: auto;
  display: block;
  background: #FFF;
  border-radius: 10px;
  padding: 15px;
  width: 165px;
}

/*-- CHART -------------------------------------*/
.chart{
  text-align: center;
}

/*-- ERROR -------------------------------------*/
.error{
  border: 1px solid #C60000;
  background-color: #FDEEEE;
  color: #C60000 !important;
}
.error::-webkit-input-placeholder{
  color: #C60000;
}
.error:-moz-placeholder{
  color: #C60000;
}
.error::-moz-placeholder{
  color: #C60000;
}
.error:-ms-input-placeholder{
  color: #C60000;
}

/*-- STEP -------------------------------------*/
.step{
  text-align: center;
  display: none;
  /* Fallback for web browsers that don't support RGBa */
  background-color: rgb(255, 255, 255);
  /* RGBa with 0.6 opacity */
  background-color: rgba(255, 255, 255, 0.3);
  /* For IE 5.5 - 7*/
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
  /* For IE 8*/
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
  min-height: 100% !important;
  border: 1px solid transparent;
}

/*-- BAND -------------------------------------*/
.band{
  color: #FFF;
  border-top: 1px solid #DDD;
  border-bottom: 1px solid #DDD;
  /* Fallback for web browsers that don't support RGBa */
  background-color: rgb(0, 0, 0);
  /* RGBa with 0.6 opacity */
  background-color: rgba(0, 0, 0, 0.6);
  /* For IE 5.5 - 7*/
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
  /* For IE 8*/
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
}
.band h1{
  font-size: 17pt;
  font-weight: normal !important;
  color: #ffff66;
}
.band label{
  color: #FFF;
  font-weight: normal;
}
.band a{
  color: #CCFFFF;
}

/*-- STEP 1 -------------------------------------*/
.step-1 #locationField{
  border-radius: 10px;
  background: #2f48d6;
  padding: 10px;
  display: inline-block;
  min-width: 260px;
}
.step-1 .input{
  width: 200px;
  margin: 0px
}

@media only screen and (min-width: 400px){
  .step-1 #locationField{
    border-radius: 10px;
    background: #2f48d6;
    padding: 10px;
    display: inline-block;
    min-width: 360px;
  }
  .step-1 .input{
    width: 300px;
    margin: 0px
  }
}

.step-1 .btn-primary{
  margin-top: 10px;
}

/*-- VERTICAL ALIGN -------------------------------------*/
.vertical-align-wrap{
  position: absolute;
  width: 100%;
  height: 100%;
  display: table;
}

.vertical-align{
  display: table-cell;
}

.vertical-align--middle {
  vertical-align: middle;
}

.vertical-align--bottom {
  vertical-align: bottom;
}

/*-- WIDGET OVERRIDES -------------------------------------*/
.rprw-chart-cont{
  max-width: 600px;
  margin: auto;
}
.rprw-chart-cont img{
  width: 100%;
  max-width: 600px;
}
.rprw-est-value-and-date,
.rprw-conf-score,
.rprw-est-change{
  margin: auto;
}

.bio img{
  margin: auto;
}
.bio{
  text-align: center;
  color: #000;
  background: #fff;
  border-radius: 10px;
  padding: 20px;
  margin: auto;
  width: 220px;
}
.bio a{
  color: #2f48d6;
}

/*-- WIDGET -------------------------------------*/
.rpr-avm-widget { 
  background-color: #ffffff;
  width: 800px;
  overflow: hidden;
}
.rpr-avm-widget div, 
.rpr-avm-widget table, 
.rpr-avm-widget a { 
  font-family: Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif; 
  color: #000000; 
  font-size: 13px; 
  line-height: 18px;
}
.rpr-avm-widget a {
  color: #1871ad; 
  font-weight: bold; 
  text-decoration: none; 
  font-size: 12px; 
  line-height: 15px; 
}
.rpr-avm-widget a:hover {
  text-decoration: underline;
}
.rpr-avm-widget a:visited {
  color: #735cb2;
}
.rpr-avm-widget a:active {
  color: #0f3c5f;
}
.rpr-avm-widget sup {
  line-height: 0; 
  vertical-align: 3px;
}
.rprw-w100 {
  width: 100%;
}
table.rprw-title-cont {
  background-color: #666666;
}
table.rprw-title-cont td {
  vertical-align: middle;
}
.rprw-title {
  color: #ffffff;
  font-size: 16px;
  line-height: 30px;
  font-weight: bold;
  padding-left: 8px;
}
.rprw-info-icon { 
  width: 20px;
} 
.rprw-info-icon a { 
  background: url(//www.narrpr.com/widgets/avm-widget/info-icon.png) no-repeat; 
  width: 13px; 
  height: 12px; 
  overflow: hidden; 
  display: block; 
}
.rprw-content { 
  padding: 10px 12px 4px 12px; 
} 
.rprw-color-scheme-3 .rprw-content { 
  border:1px solid #cfcfcf; 
  padding:10px 11px 2px 11px; 
}
.rprw-color-scheme-3.rprw-with-title .rprw-content { 
  border-top: 0;
}
.rprw-address {
  margin-bottom: 5px; 
  line-height: 16px;
} 
table.rprw-est-value-and-date { 
  margin-bottom: 8px;
}
td.rprw-est-value {
  vertical-align: middle;
}
td.rprw-est-value div { font-weight:bold; font-size:36px; line-height:46px; height:43px; overflow:hidden; } 
td.rprw-est-value.rprw-est-value-alt div { font-size:30px; } 
td.rprw-est-value-date { font-size:11px; line-height:13px; padding-left:8px; vertical-align:middle; opacity:.70; filter:Alpha(Opacity=70); } 
.rprw-est-range { margin-bottom:10px; } 
.rprw-est-range span { white-space:nowrap; font-size:15px; line-height:20px; } 
.rprw-est-range-values { font-weight:bold; } 
table.rprw-conf-score { margin-bottom:5px; margin-top:-5px; } 
table.rprw-conf-score td { vertical-align:middle; line-height:32px; } 
td.rprw-conf-score-title { font-size:15px; } 
td.rprw-conf-score-stars { font-size:26px; letter-spacing:2px; } 
table.rprw-est-change { margin-bottom:10px; } 
table.rprw-est-change td { vertical-align:top; } 
.rprw-est-change-row1 { padding-bottom:8px; } 
td.rprw-est-change-text span { white-space:nowrap; } 
.rprw-est-change-arrow { font-size:16px; line-height:19px; display:none; } 
.rprw-est-change-arrow.up { color:#1871ad; display:block; padding-right:5px; margin-top:-1px; } 
.rprw-est-change-arrow.down { color:#d01a00; display:block; padding-right:5px; } 
.rprw-chart-cont { background:#fff; margin-bottom:8px; margin-top:12px; color:#000; } 
.rprw-chart-title { padding:5px 0 5px 8px; font-weight:bold; } 
table.rprw-chart-legend td { padding:4px 1px 6px 4px; } 
.rprw-chart-legend-box { width:16px; height:16px; overflow:hidden; margin-left:4px; } 
.rprw-chart-legend-box.box1 { background-color:#1871ad; } 
.rprw-chart-legend-box.box2 { background-color:#A2C6DE; } 
.rprw-color-scheme-2 .rprw-chart-title, 
.rprw-color-scheme-2 table.rprw-chart-legend td { color:#000; } 
.rprw-links-title { font-weight:bold; margin-bottom:8px; font-size:14px; line-height:19px; } 
.rprw-links td { vertical-align:top; } 
.rprw-link-cont { margin-bottom:3px; line-height:15px; } 
.rprw-links-logo { width:61px; height:105px; margin-right:12px; background:url(//www.narrpr.com/widgets/avm-widget/rpr-logo.png) no-repeat; } .rprw-more-about-data { border-top:1px solid #fff; padding-top:7px; margin-top:7px; padding-bottom:5px; }  .rprw-orientation-1 td.rprw-content-1 { vertical-align:top; width:276px; padding-right:12px; } .rprw-orientation-1 td.rprw-content-2 { vertical-align:top; } .rprw-orientation-1 .rprw-chart-cont { margin-top:2px; }

